syntax = "proto3";

package dd_trace;

message TracePayload {
	string hostName = 1;
	string env = 2;
	repeated APITrace traces = 3;
	repeated Span transactions = 4;
}

message APITrace {
	uint64 traceID = 1;
	repeated Span spans = 2;
	int64 startTime = 6;
	int64 endTime = 7;
}

message Span {
	string service = 1;
	string name = 2;
	string resource = 3;
	uint64 traceID = 4;
	uint64 spanID = 5;
	uint64 parentID = 6;
	int64 start = 7;
	int64 duration = 8;
	int32 error = 9;
	map<string, string> meta = 10;
	map<string, double> metrics = 11;
	string type = 12;
}
